Fix dark mode encounter header blocking click events.

--- a/less/v2/encounter.less
+++ b/less/v2/encounter.less
@@ -20,6 +20,8 @@
     opacity: .1;
     mask-image: linear-gradient(to bottom, black, transparent);
     filter: grayscale(1);
+    z-index: -1;
+    pointer-events: none;
   }
 
   .window-content {
